style: :lipstick: MINOR CHANGES IN CSS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -20,7 +20,7 @@ body {
   padding: 20px;
   border-radius: 12px;
   text-align: center;
-  color: #fff;
+  color: #ffffff;
   box-shadow: 0 8px 16px #0000004d;
   display: flex;
   flex-direction: column;
